# jd-sql

./: .gitignore  .gitmodules  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES.md  Taskfile.yml  build.gradle.kts  settings.gradle.kts
.junie/: guidelines.md
doc/: diff-on-off.md  jd-pg-plpgsql.md  jd-upstream.md  postgres-dev.md  v2.md
docker/: plv8-init.sql  postgres-plv8-prebuilt.Dockerfile  postgres-plv8.Dockerfile  postgres.Dockerfile
examples/: jsonb_diff_merge.sql
examples/postgres/: jsonb_diff_merge.sql
sql/: jd_pg_plpgsql.sql
sql/postgres/: jd_pg_plpgsql.sql
taskfiles/: engines-stubs.yml  jd-sql-spec-runner.yml  jd-subproject.yml  postgres-plv8.yml  postgres-vanilla.yml
test-src/: go.mod
test-src/java-tests/: build.gradle.kts
test-src/java-tests/src/test/java/dev/jdsql/: EngineSpecIT.java  PgSpecIT.java  SpecCase.java  SpecLoader.java
test-src/java-tests/src/test/resources/: simplelogger.properties
test-src/jd-sql-spec-runner/: main.go
test-src/testdata/cases/: jd-sql-custom.json  jd-sql-unit.json
test-src/testdata/jd-sql-spec-runner/: jd-sql-spec.example.yaml
test-src/testdata/jd-sql-spec-runner/configs/: postgres-plpgsql.yaml  postgres-plv8.yaml
tools/jd-sql-spec-runner/: Cargo.toml  jd-sql-spec.example.yaml
tools/jd-sql-spec-runner/configs/: postgres-plpgsql.yaml
tools/jd-sql-spec-runner/src/: main.rs
