[package]
name = "jd-sql-spec-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
url = "2"
